--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,11 @@
+eureka.instance.hostname=localhost
+
+################### DataSource Configuration ##########################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/microservice_eventmanagement_database?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Rakesh@7
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+################### Hibernate Configuration ##########################
+
 spring.jpa.hibernate.ddl-auto=update
-eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
-eureka.client.instance.preferIpAddress = true
-eureka.instance.hostname=localhost
+spring.jpa.show-sql=true
