--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,5 @@
 eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
 
 ################### DataSource Configuration ##########################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
